--- a/src/GUI/GHS3DPluginGUI_AdvWidget_QTD.ui
+++ b/src/GUI/GHS3DPluginGUI_AdvWidget_QTD.ui
@@ -43,16 +43,6 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="2" colspan="2">
-       <widget class="QSpinBox" name="maxMemorySpin">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-          <horstretch>1</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-       </widget>
-      </item>
       <item row="3" column="0">
        <widget class="QCheckBox" name="maxMemoryCheck">
         <property name="text">
@@ -60,8 +50,15 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="4">
+       <widget class="QLabel" name="initialMemoryLabel">
+        <property name="text">
+         <string>MB</string>
+        </property>
+       </widget>
+      </item>
       <item row="0" column="2" colspan="2">
-       <widget class="QSpinBox" name="initialMemorySpin">
+       <widget class="SMESHGUI_SpinBox" name="initialMemorySpin">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
           <horstretch>1</horstretch>
@@ -70,10 +67,13 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="4">
-       <widget class="QLabel" name="initialMemoryLabel">
-        <property name="text">
-         <string>MB</string>
+      <item row="3" column="2" colspan="2">
+       <widget class="SMESHGUI_SpinBox" name="maxMemorySpin">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+          <horstretch>1</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
        </widget>
       </item>
