--- a/src/GUI/GHS3DPluginGUI_AdvWidget_QTD.ui
+++ b/src/GUI/GHS3DPluginGUI_AdvWidget_QTD.ui
@@ -168,7 +168,7 @@
         <item row="0" column="2">
          <widget class="QPushButton" name="workingDirectoryPushButton">
           <property name="text">
-           <string>PushButton</string>
+           <string>...</string>
           </property>
          </widget>
         </item>
